--- a/22.7.11/style.scss
+++ b/22.7.11/style.scss
@@ -6,3 +6,19 @@
 .showing {
     display: block;
 }
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+ul {
+    width: 80%;
+    background: #ccc;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+}
